--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^7.0.4",
     "bootstrap": "^5.2.3",
+    "flatpickr": "^4.6.13",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
