--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,6 +9,7 @@ local:
 cloudinary:
   service: Cloudinary
   folder: <%= Rails.env %>
+  resource_type: :auto
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
