--- a/config/storage.yml
+++ b/config/storage.yml
@@ -15,6 +15,13 @@ cloudinary_raw:
   folder: <%= Rails.env %>
   resource_type: :raw
 
+amazon:
+  service: S3
+  access_key_id: <%= ENV.fetch('AMAZON_ACCESS_KEY_ID') %>
+  secret_access_key: <%= ENV.fetch('AMAZON_SECRET_ACCESS_KEY') %>
+  region: eu-central-1
+  bucket: groupappo
+
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
